# ai-coding-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
ai_agent/: __init__.py  cli.py  config.py  llm.py  tools.py
