[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicoder-cli"
version = "0.2.0"
description = "Terminal-native AI coding agent — OpenAI & DeepSeek, file tools, agentic loop."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "ahmadalip", email = "ahmadalip@users.noreply.github.com" }
]

keywords = ["ai", "coding", "agent", "openai", "deepseek", "cli", "developer-tools", "llm"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
]

dependencies = [
  "openai>=1.35.0,<2.0.0",
  "typer>=0.12.0,<1.0.0",
  "rich>=13.7.0,<14.0.0",
  "pydantic>=2.7.0,<3.0.0",
]

[project.scripts]
aicoder = "ai_agent.cli:main"

[project.urls]
Homepage    = "https://github.com/ahmadalip/ai-coding-agent"
Repository  = "https://github.com/ahmadalip/ai-coding-agent"
Issues      = "https://github.com/ahmadalip/ai-coding-agent/issues"

[tool.setuptools.packages.find]
where    = ["."]
include  = ["ai_agent*"]

[tool.setuptools.package-data]
"ai_agent" = ["py.typed"]
